feat: unify notes path
